Added API call to create a character. Added development SQLite database. Added Automapper. Added Documentation XML for Swagger. Deleted starter sample code.

--- a/.gitignore
+++ b/.gitignore
@@ -270,6 +270,11 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# SQLite Files
+*.db
+*.db-shm
+*.db-wal
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
